# xz-rs

./: .gitmodules  .travis.yml  COPYRIGHT  Cargo.toml  README.md  index.html
xz/: Cargo.toml  index.html
xz-sys/: Cargo.toml  build.rs
xz-sys/src/: lib.rs
xz-sys/tests/: test.rs
xz/src/: lib.rs
