[package]
name = "xz"
version = "0.0.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
homepage = "https://github.com/simnalamburt/xz-rs"
repository = "https://github.com/simnalamburt/xz-rs"
documentation = "http://simnalamburt.github.io/xz-rs"
keywords = ["xz", "encoding"]
license = "BSD-2-Clause"
readme = "README.md"

description = """
A streaming compression/decompression library for rust with bindings to liblzma.
"""

[dependencies]
xz-sys = { path = "xz-sys" }
