[package]

name = "xz-sys"
version = "0.0.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
build = "build.rs"
license = "BSD-2-Clause"
homepage = "https://github.com/simnalamburt/xz-rs"
repository = "https://github.com/simnalamburt/xz-rs"
documentation = "http://simnalamburt.github.io/xz-rs"
description = """
A streaming compression/decompression library for rust with bindings to liblzma.
"""

[lib]
name = "xz-sys"
path = "lib.rs"

[build-dependencies]
pkg-config = "*"
