[package]

name = "xz-sys"
version = "0.0.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
build = "build.rs"
license = "BSD-2-Clause"
homepage = "https://github.com/simnalamburt/xz-rs"
repository = "https://github.com/simnalamburt/xz-rs"
documentation = "http://simnalamburt.github.io/xz-rs"
description = """
A streaming compression/decompression library for rust with bindings to liblzma.
"""

[dependencies]
libc = "0.1"

[build-dependencies]
pkg-config = "0.3"
tar = "0.3.1"
