[package]
name = "xz-sys"
version = "0.1.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>", "Alex Crichton <alex@alexcrichton.com>"]
homepage = "https://github.com/alexcrichton/xz2-rs"
repository = "https://github.com/alexcrichton/xz2-rs"
documentation = "https://docs.rs/xz-sys"
license = "Apache-2.0 OR MIT"

description = """
Raw bindings to liblzma which contains an implementation of LZMA and xz stream
encoding/decoding.

High level Rust bindings are available in the `xz` crate.

Alias of `lzma-sys` crate.
"""
categories = ["external-ffi-bindings"]
edition = "2018"

[dependencies]
lzma-sys = "0.1"
